add placeholders for two experiments

--- a/html/index.html
+++ b/html/index.html
@@ -17,8 +17,8 @@
 		<p>The entries below are little experiments. Creative bursts that I finally saw fit to give shape and color. They're dated for the sake of some implicit organization. They aren't remotely connected to one another.</p>
 		<p>Browse. Enjoy! <a href="mailto:nick@fancyenchiladas.net">Email me</a> if you want to chat about them.</p>
 		<hr>
-		<h3><a href="#">2025.07.03 Haiku Engine</a></h3>
-		<h3><a href="#">2025.06.21 Cats</a></h3>
+		<h3><a href="/haiku-engine/">2025.07.03 Haiku Engine</a></h3>
+		<h3><a href="/cats/">2025.06.21 Cats</a></h3>
 		<hr>
 		<p><small>From the quixotic mind of <a href="https://nickschneble.xyz/">Nick Schneble</a><br><a href="https://github.com/nschneble/fancyenchiladas">Fork this on GitHub</a></small></p>
 		<a href="https://my.greengeeks.com/seal/"><img src="/images/greengeeks.png" alt="GreenGeeks Seal" loading="lazy"></a>
