add cats experiment

--- a/html/cats.html
+++ b/html/cats.html
@@ -10,10 +10,26 @@
 		<link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
 		<link rel="shortcut icon" href="/images/favicon.ico">
 		<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+		<style>
+			body {
+				background: white;
+				color: black;
+			}
+
+			a:link,
+			a:visited {
+				color: purple;
+			}
+		</style>
 	</head>
 	<body>
 		<h1>Cats</h1>
-		<p>Numquam numquam ex et quia non adipisci modi. Nisi nemo recusandae quasi repellendus eaque optio nostrum. Optio ut assumenda necessitatibus perferendis et est quae dolorum. Excepturi numquam omnis hic delectus.</p>
+		<p><strong>June 21, 2025<br>Scotland</strong></p>
+		<p>I drew this cat. From these other cats.</p>
+		<div class="flex">
+			<div class="flex-col-2"><img src="/images/cat-drawing.jpg" alt="A drawing of a cat I made"></div>
+			<div class="flex-col-2"><img src="/images/cat-notebook.jpg" alt="A notebook with many colorfully drawn cats on the front"></div>
+		</div>
 		<hr>
 		<p><small>← <a href="/">Back to list</a></small></p>
 	</body>
