--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<h1>Fancy Enchiladas</h1>
 		<p>Welcome to my blog! It's not about fancy enchiladas. It's also not really a blog.</p>
-		<p>The entries below are little experiments. Creative bursts that I finally saw fit to give shape and color. They're dated for the sake of some implicit organization. They aren't remotely connected to one another.</p>
+		<p>The entries below are little experiments. Creative bursts that I saw fit to give shape and color. They're dated for the sake of some implicit organization. They aren't remotely connected.</p>
 		<p>Browse. Enjoy! <a href="mailto:nick@fancyenchiladas.net">Email me</a> if you want to chat about them.</p>
 		<hr>
 		<h3><a href="/haiku-engine/">2025.07.03 Haiku Engine</a></h3>
