enhance haikus further

--- a/html/haiku-engine.html
+++ b/html/haiku-engine.html
@@ -42,7 +42,7 @@
 				I'm <span id="six"></span> with <span id="seven"></span>
 			</p>
 			<hr>
-			<p><small>← <a href="/">Back to list</a></small></p>
+			<p><small>↻ <a href="/haiku-engine/">Generate another</a><br>← <a href="/">Back to list</a></small></p>
 		</div>
 		<script type="module">
 			/*global document fetch */
