--- a/html/cats.html
+++ b/html/cats.html
@@ -23,14 +23,22 @@
 		</style>
 	</head>
 	<body>
-		<h1>Cats</h1>
-		<p><strong>June 21, 2025<br>Scotland</strong></p>
-		<p>I drew this cat. From these other cats.</p>
-		<div class="flex">
-			<div class="flex-col-2"><img src="/images/cat-drawing.jpg" alt="A drawing of a cat I made"></div>
-			<div class="flex-col-2"><img src="/images/cat-notebook.jpg" alt="A notebook with many colorfully drawn cats on the front"></div>
-		</div>
+		<header>
+			<h1>Cats</h1>
+			<p><strong>June 21, 2025<br>Scotland</strong></p>
+		</header>
+		<main>
+			<p>I drew this cat. From these other cats.</p>
+			<div class="flex">
+				<div class="flex-col-2"><img src="/images/cat-drawing.jpg" alt="A drawing of a cat I made"></div>
+				<div class="flex-col-2"><img src="/images/cat-notebook.jpg" alt="A notebook with many colorfully drawn cats on the front"></div>
+			</div>
+		</main>
 		<hr>
-		<p><small>← <a href="/">Back to list</a></small></p>
+		<footer>
+			<nav>
+				<p><small>← <a href="/">Back to list</a></small></p>
+			</nav>
+		</footer>
 	</body>
 </html>
