--- a/html/index.html
+++ b/html/index.html
@@ -12,15 +12,24 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
 	</head>
 	<body>
-		<h1>Fancy Enchiladas</h1>
-		<p>Welcome to my blog! It's not about fancy enchiladas. It's also not really a blog.</p>
-		<p>The entries below are little experiments. Creative bursts that I saw fit to give shape and color. They're dated for the sake of some implicit organization. They aren't remotely connected.</p>
-		<p>Browse. Enjoy! <a href="mailto:nick@fancyenchiladas.net">Email me</a> if you want to chat about them.</p>
+		<header>
+			<h1>Fancy Enchiladas</h1>
+		</header>
+		<main>
+			<p>Welcome to my blog! It's not about fancy enchiladas. It's also not really a blog.</p>
+			<p>The entries below are little experiments. Creative bursts that I saw fit to give shape and color. They're dated for the sake of some implicit organization. They aren't remotely connected.</p>
+			<p>Browse. Enjoy! <a href="mailto:nick@fancyenchiladas.net" style="text-decoration: underline;">Email me</a> if you want to chat about them.</p>
+			<hr>
+			<h2>Entries</h2>
+			<nav>
+				<h3><a href="/haiku-engine/">2025.07.03 Haiku Engine</a></h3>
+				<h3><a href="/cats/">2025.06.21 Cats</a></h3>
+			</nav>
+		</main>
 		<hr>
-		<h3><a href="/haiku-engine/">2025.07.03 Haiku Engine</a></h3>
-		<h3><a href="/cats/">2025.06.21 Cats</a></h3>
-		<hr>
-		<p><small>From the quixotic mind of <a href="https://nickschneble.xyz/">Nick Schneble</a><br><a href="https://github.com/nschneble/fancyenchiladas">Fork this on GitHub</a></small></p>
-		<a href="https://my.greengeeks.com/seal/"><img src="/images/greengeeks.png" alt="GreenGeeks Seal" loading="lazy"></a>
+		<footer>
+			<p><small>From the quixotic mind of <a href="https://nickschneble.xyz/">Nick Schneble</a><br><a href="https://github.com/nschneble/fancyenchiladas">Fork this on GitHub</a></small></p>
+			<a href="https://my.greengeeks.com/seal/"><img src="/images/greengeeks.png" alt="GreenGeeks Seal" loading="lazy"></a>
+		</footer>
 	</body>
 </html>
