drop the lazy loading

--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
 		<hr>
 		<footer>
 			<p><small>From the quixotic mind of <a href="https://nickschneble.xyz/">Nick Schneble</a><br><a href="https://github.com/nschneble/fancyenchiladas">Fork this on GitHub</a></small></p>
-			<a href="https://my.greengeeks.com/seal/"><img src="/images/greengeeks.png" alt="GreenGeeks Seal" loading="lazy"></a>
+			<a href="https://my.greengeeks.com/seal/"><img src="/images/greengeeks.png" alt="GreenGeeks Seal"></a>
 		</footer>
 	</body>
 </html>
