add some UI distinction to the Haiku Engine

--- a/html/haiku-engine.html
+++ b/html/haiku-engine.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Fancy Enchiladas</title>
+		<title>Haiku Engine</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="A blog that's not about fancy enchiladas and is also not really a blog">
 		<link rel="stylesheet" href="/css/style.css">
@@ -24,11 +24,12 @@
 			a:link,
 			a:visited {
 				color: white;
+				text-decoration: underline;
 			}
 		</style>
 	</head>
 	<body>
-		<div style="background: rgba(0,0,0,0.65); color: white; padding: 20px;">
+		<div style="background: rgba(0,0,0,0.65); color: white; padding: 20px; text-align: center;">
 			<header>
 				<h1>Haiku Engine</h1>
 				<p><strong>July 3, 2025<br>Beverly</strong></p>
@@ -41,10 +42,9 @@
 					I'm <span id="six"></span> with <span id="seven"></span>
 				</p>
 			</main>
-			<hr>
 			<footer>
 				<nav>
-					<p><small>↻ <a href="/haiku-engine/">Generate another</a><br>← <a href="/">Back to list</a></small></p>
+					<p><small>↻ <a href="/haiku-engine/">Generate another</a><br>← <a href="/">More entries</a></small></p>
 				</nav>
 			</footer>
 		</div>
