go even simpler for the cats

--- a/html/cats.html
+++ b/html/cats.html
@@ -2,9 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Fancy Enchiladas</title>
+		<title>Cats</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="A blog that's not about fancy enchiladas and is also not really a blog">
+		<meta name="description" content="I drew this cat">
 		<link rel="stylesheet" href="/css/style.css">
 		<link rel="icon" type="image/png" href="/images/favicon-96x96.png" sizes="96x96">
 		<link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
@@ -34,10 +34,9 @@
 				<div class="flex-col-2"><img src="/images/cat-notebook.jpg" alt="A notebook with many colorfully drawn cats on the front"></div>
 			</div>
 		</main>
-		<hr>
 		<footer>
 			<nav>
-				<p><small>← <a href="/">Back to list</a></small></p>
+				<p><small>← <a href="/">More entries</a></small></p>
 			</nav>
 		</footer>
 	</body>
