add book doodles

--- a/html/index.html
+++ b/html/index.html
@@ -31,8 +31,9 @@
 			<div class="hr-enchilada"></div>
 			<h2>Entries</h2>
 			<nav>
-				<h3><a href="/haiku-engine/">2025.07.03 Haiku Engine</a></h3>
-				<h3><a href="/cats/">2025.06.21 Cats</a></h3>
+				<h3><a href="/book-doodles/">2025.09.27 • Book Doodles</a></h3>
+				<h3><a href="/haiku-engine/">2025.07.03 • Haiku Engine</a></h3>
+				<h3><a href="/cats/">2025.06.21 • Cats</a></h3>
 			</nav>
 		</main>
 		<div class="hr-enchilada"></div>
