make the haiku engine a dash more mysterious

--- a/html/haiku-engine.html
+++ b/html/haiku-engine.html
@@ -44,7 +44,7 @@
 			</main>
 			<footer>
 				<nav>
-					<p><small>↻ <a href="/haiku-engine/">Generate another</a><br>← <a href="/">More entries</a></small></p>
+					<p><small>↻ <a href="/haiku-engine/">Regenerate</a></small></p>
 				</nav>
 			</footer>
 		</div>
